--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.19.0",
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
+    "gsap": "^3.9.1",
     "lodash": "^4.17.21",
     "retry-axios": "^2.6.0",
     "socket.io-client": "^4.2.0",
@@ -29,7 +30,7 @@
     "vue-select": "^3.16.0",
     "vue-slide-up-down": "^2.0.1",
     "vue-spinner": "^1.0.4",
-    "vue-yandex-maps": "^0.11.0",
+    "vue-yandex-maps": "0.8.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
